--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,21 +1,13 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'layout.html' %}
 
 {% block title %}
-  Error 404
+  <title>Error 404</title>
 {% endblock %}
 
-{% block navbar %}
-{% endblock %}
-
-{% block content %}
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-          <h2>404 Not found</h2>
-          <p>
-            Lo sentimos, un error ha ocurrido. Página no encontrada
-          </p>
-      </div>
-    </div>
-  </div>
+{% block container %}
+<div class="col-md-12 text-center">
+    <h1>404 - Page Not Found</h1>
+    <p>Lo sentimos, un error ha ocurrido. Página no encontrada</p>
+    <a href="{{ url_for('.index') }}" class="btn btn-primary">Return to Home</a>
+</div>
 {% endblock %}
